@@ -13,6 +13,10 @@ shim (15.8-1~deb11u1) UNRELEASED; urgency=medium
     + 0001-sbat-Add-grub.peimage-2-to-latest-CVE-2024-2312.patch
     + 0002-sbat-Also-bump-latest-for-grub-4-and-to-todays-date.patch
   * Log if the build is nx-compatible or not
+  * Force shim to use the latest revocations by default to block some
+    older grub / peimage issues. This is:
+    "shim,4\ngrub,4\ngrub.peimage,2\n"
+
 
  -- Steve McIntyre <93sam@debian.org>  Sun, 05 May 2024 00:02:51 +0100
 
